...
    if (_formKey.currentState.validate()) {
      _formKey.currentState.save();
      context.read<AuthService>().emailSignIn(
          context: ctx,
          trySignIn: widget.trySubmit,
          failedSignIn: widget.failedFallback,
          email: _userEmail,
          password: _userPassword);
    }
  }

  void tryEmailSignUp(ctx) {
    FocusScope.of(context).unfocus();
    if (_formKey.currentState.validate()) {
...
                  ),
                if (!widget.isSigningIn) SizedBox(height: 48),
                Row(
                  children: [
                    Expanded(
                      child: ElevatedButton(
                        key: ValueKey("finishAuthFormButton"),
                        onPressed: widget.isSigningIn
                            ? () {
                                tryEmailSignIn(context);
                              }
                            : () {
                                tryEmailSignUp(context);
                              },
                        child: Text(widget.isSigningIn ? 'Sign In' : 'Sign Up'),
                      ),
                    )
                  ],
                ),
                if (widget.isSigningIn) ...[
                  SizedBox(
...
