...
    NotesScreen(),
    FinancesScreen(),
    ProfileScreen(),
  ];

  final List<String> _screenName = [
    'Home',
    'Schedule',
    'Notes',
    'Finances',
    'Profile',
  ];

...
        actions: [
          IconButton(
              onPressed: context.read<AuthService>().signOut,
              icon: Icon(Icons.logout))
        ],
      ),
      bottomNavigationBar: BottomNavigationBar(
        backgroundColor: Theme.of(context).primaryColor,
        unselectedItemColor: Colors.black54,
        selectedItemColor: Colors.black,
        type: BottomNavigationBarType.fixed,
        showSelectedLabels: false,
        showUnselectedLabels: false,
...
